# arbitrage-fastapi

./: .env  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env  env.example  pyproject.toml  ramzinex.md  troubleshoot.py  wallex.md
accounts/: admin.py  api.py  models.py
accounts/migrations/: 0001_initial.py
analytics/: admin.py  api.py  models.py  tasks.py
analytics/migrations/: 0001_initial.py
arbitrage/: admin.py  api.py  engine.py  models.py  schemas.py  tasks.py
arbitrage/management/commands/: emergency_stop.py  health_check.py  monitor_strategies.py  optimize_config.py  scan_arbitrage.py
arbitrage/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py
core/: admin.py  admin_dashboard.py  exceptions.py  middleware.py  models.py  tasks.py  utils.py
core/migrations/: 0001_initial.py
exchanges/: admin.py  api.py  models.py  schemas.py  tasks.py
exchanges/management/commands/: websocket.py
exchanges/migrations/: 0001_initial.py
exchanges/services/: base.py  nobitex.py  ramzinex.py  wallex.py
exchanges/tasks/: websocket_tasks.py
exchanges/websocket/: __init__.py  manager.py  ramzinex_websocket.py  wallex_websocket.py
static/admin/css/: custom.css  dashboard.css
static/admin/js/: dashboard.js
staticfiles/admin/js/: custom.js
templates/admin/: enhanced_index.html  index.html
trading/: admin.py  api.py  models.py  schemas.py  tasks.py
trading/migrations/: 0001_initial.py
