[project]
name = "arbitrage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "apscheduler>=3.11.0",
    "asgiref>=3.9.0",
    "asyncio-mqtt>=0.16.2",
    "black>=25.1.0",
    "celery>=5.5.3",
    "centrifuge-python>=0.4.1",
    "cryptography>=44.0.0",
    "django>=5.2.0",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "django-ninja>=1.4.3",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "django-unfold>=0.62.0",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psutil>=6.1.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "python-socketio>=5.13.0",
    "redis>=6.2.0",
    "ujson>=5.10.0",
    "websockets>=15.0.1",
]

[tool.setuptools]
packages = [
    "accounts",
    "analytics",
    "arbitrage",
    "config",
    "core",
    "exchanges",
    "trading",
]
